Define the color palette.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
         <title>Mosify</title>
     </head>
     <body>
+        <header>
+            <nav class="navbar">
+                <img src="./icons/logo.svg" alt="Mosify" class="logo" />
+                <ul class="navbar__list">
+                    <li class="navbar__link"><a href="#hosting">Hosting</a></li>
+                    <li class="navbar__link"><a href="#domain">Domain</a></li>
+                    <li class="navbar__link"><a href="#vps">VPS</a></li>
+                    <li class="navbar__link"><a href="#pricing">Pricing</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="hero">
+                <h1 class="hero__heading">Cloud Hosting for Pros</h1>
+                <img src="" alt="" class="hero__img" />
+                <p class="hero__tagline">
+                    Deploy your website in less than 60 seconds
+                </p>
+                <button class="btn hero__btn">GET STARTED</button>
+            </div>
+        </main>
         <script type="module" src="/index.js"></script>
     </body>
 </html>
