--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:wght@600&display=swap"
+            rel="stylesheet"
+        />
         <title>Mosify</title>
     </head>
     <body>
@@ -27,6 +33,13 @@
                 </p>
                 <button class="btn hero__btn">GET STARTED</button>
             </div>
+            <h2>Heading 2</h2>
+            <h3>Heading 3</h3>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et
+                saepe doloremque rem quisquam quibusdam illum quo fugiat culpa
+                repellendus aspernatur!
+            </p>
         </main>
         <script type="module" src="/index.js"></script>
     </body>
