--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
                 </p>
                 <button class="btn hero__btn">GET STARTED</button>
             </div>
-            <h2>Heading 2</h2>
-            <h3>Heading 3</h3>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et
-                saepe doloremque rem quisquam quibusdam illum quo fugiat culpa
-                repellendus aspernatur!
-            </p>
+            <a href="#" class="link--arrow">Learn More</a>
         </main>
         <script type="module" src="/index.js"></script>
     </body>
