Build badges component

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:wght@600&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@600&display=swap"
             rel="stylesheet"
         />
         <title>Mosify</title>
@@ -34,6 +34,8 @@
                 <button class="btn hero__btn">GET STARTED</button>
             </div>
             <a href="#" class="link--arrow">Learn More</a>
+            <span class="badge badge--small badge--primary">10% Off</span>
+            <span class="badge badge--secondary">10% Off</span>
         </main>
         <script type="module" src="/index.js"></script>
     </body>
