Code lists component

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="navbar">
                 <img src="./icons/logo.svg" alt="Mosify" class="logo" />
-                <ul class="navbar__list">
+                <ul class="navbar__list list">
                     <li class="navbar__link"><a href="#hosting">Hosting</a></li>
                     <li class="navbar__link"><a href="#domain">Domain</a></li>
                     <li class="navbar__link"><a href="#vps">VPS</a></li>
@@ -36,6 +36,11 @@
             <a href="#" class="link--arrow">Learn More</a>
             <span class="badge badge--small badge--primary">10% Off</span>
             <span class="badge badge--secondary">10% Off</span>
+            <ul class="list list--tick">
+                <li class="list__item">Item 1</li>
+                <li class="list__item">Item 2</li>
+                <li class="list__item">Item 3</li>
+            </ul>
         </main>
         <script type="module" src="/index.js"></script>
     </body>
