Build buttons component

--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
         <header>
             <nav class="navbar">
                 <img src="./icons/logo.svg" alt="Mosify" class="logo" />
-                <ul class="navbar__list list">
-                    <li class="navbar__link"><a href="#hosting">Hosting</a></li>
-                    <li class="navbar__link"><a href="#domain">Domain</a></li>
-                    <li class="navbar__link"><a href="#vps">VPS</a></li>
-                    <li class="navbar__link"><a href="#pricing">Pricing</a></li>
+                <ul class="navbar__list list list--inline">
+                    <li class="navbar__link list__item">
+                        <a href="#hosting">Hosting</a>
+                    </li>
+                    <li class="navbar__link list__item">
+                        <a href="#domain">Domain</a>
+                    </li>
+                    <li class="navbar__link list__item">
+                        <a href="#vps">VPS</a>
+                    </li>
+                    <li class="navbar__link list__item">
+                        <a href="#pricing">Pricing</a>
+                    </li>
                 </ul>
             </nav>
         </header>
