--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@600&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600;700&family=Montserrat:wght@600&display=swap"
             rel="stylesheet"
         />
         <title>Mosify</title>
@@ -50,6 +50,7 @@
                 <li class="list__item">Item 3</li>
             </ul>
         </main>
+        <footer><span>Copyright &copy; 2020 mosh</span></footer>
         <script type="module" src="/index.js"></script>
     </body>
 </html>
