Build blocks,callouts,collapsible,grids,hero,icons,navbar,quote,testimonial components

--- a/index.html
+++ b/index.html
@@ -13,69 +13,8 @@
         <title>Mosify</title>
     </head>
     <body>
-        <header>
-            <nav class="navbar">
-                <img src="./icons/logo.svg" alt="Mosify" class="logo" />
-                <ul class="navbar__list list list--inline">
-                    <li class="navbar__link list__item">
-                        <a href="#hosting">Hosting</a>
-                    </li>
-                    <li class="navbar__link list__item">
-                        <a href="#domain">Domain</a>
-                    </li>
-                    <li class="navbar__link list__item">
-                        <a href="#vps">VPS</a>
-                    </li>
-                    <li class="navbar__link list__item">
-                        <a href="#pricing">Pricing</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <div class="hero">
-                <h1 class="hero__heading">Cloud Hosting for Pros</h1>
-                <img src="" alt="" class="hero__img" />
-                <p class="hero__tagline">
-                    Deploy your website in less than 60 seconds
-                </p>
-                <button class="btn hero__btn">GET STARTED</button>
-            </div>
-            <a href="#" class="link--arrow">Learn More</a>
-            <span class="badge badge--small badge--primary">10% Off</span>
-            <span class="badge badge--secondary">10% Off</span>
-            <ul class="list list--tick">
-                <li class="list__item">Item 1</li>
-                <li class="list__item">Item 2</li>
-                <li class="list__item">Item 3</li>
-            </ul>
-            <div class="plan plan--popular">
-                <div class="card card--secondary">
-                    <header class="card__header">
-                        <h3 class="plan__name">Entry</h3>
-                        <span class="plan__price">$14</span>
-                        <span class="plan__billing-cycle">/month</span>
-                        <span class="badge badge--secondary badge--small"
-                            >10% OFF</span
-                        >
-                        <span class="plan__description"
-                            >Easy start on the cloud</span
-                        >
-                    </header>
-                    <div class="card__body">
-                        <ul class="list list--tick">
-                            <li class="list__item">Unlimited Websites</li>
-                            <li class="list__item">Unlimited Bandwidth</li>
-                            <li class="list__item">100 GB SSD Storage</li>
-                            <li class="list__item">3 GB RAM</li>
-                        </ul>
-                        <button class="btn btn--outline btn--block">
-                            Buy now
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </main>
+        <header></header>
+        <main></main>
         <footer><span>Copyright &copy; 2020 mosh</span></footer>
         <script type="module" src="/index.js"></script>
     </body>
