Fix audit, improve performance

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
         <header>
             <nav class="nav collapsible">
-                <a href="/" class="nav__brand"
+                <a aria-label="Moshify" href="/" class="nav__brand"
                     ><img src="logo.svg" alt="Mosify"
                 /></a>
                 <svg class="icon icon--white nav__toggler">
@@ -85,6 +85,7 @@
                 </header>
                 <div class="input-group">
                     <input
+                        aria-label="Domain"
                         type="text"
                         class="input"
                         placeholder="Enter domain name here..."
@@ -234,6 +235,7 @@
                         </p>
                         <a
                             href="https://codewithmosh.com"
+                            alt="codewithmosh"
                             target="_blank"
                             class="link--arrow"
                             >Learn More</a
@@ -264,6 +266,7 @@
                         </p>
                         <a
                             href="https://codewithmosh.com"
+                            alt="codewithmosh"
                             target="_blank"
                             class="link--arrow"
                             >Learn More</a
@@ -294,6 +297,7 @@
                         </p>
                         <a
                             href="https://codewithmosh.com"
+                            alt="codewithmosh"
                             target="_blank"
                             class="link--arrow"
                             >Learn More</a
@@ -327,6 +331,7 @@
                         </p>
                         <a
                             href="https://codewithmosh.com"
+                            alt="codewithmosh"
                             target="_blank"
                             class="link--arrow"
                             >Learn More</a
@@ -525,6 +530,7 @@
                         </p>
                     </div>
                     <a
+                        alt="codewithmosh"
                         target="_blank"
                         href="https://codewithmosh.com"
                         class="btn btn--secondary btn--stretched"
